WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239962
ServiceWorkerRegistration update should fail if called from an installing service worker context
https://bugs.webkit.org/show_bug.cgi?id=239962
Summary
ServiceWorkerRegistration update should fail if called from an installing ser...
youenn fablet
Reported
2022-05-02 07:50:45 PDT
ServiceWorkerRegistration update should fail if called from an installing service worker context
Attachments
Patch
(4.96 KB, patch)
2022-05-02 07:52 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.96 KB, patch)
2022-05-02 22:29 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.01 KB, patch)
2022-05-02 23:46 PDT
,
youenn fablet
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2022-05-02 07:52:01 PDT
Created
attachment 458679
[details]
Patch
youenn fablet
Comment 2
2022-05-02 10:09:20 PDT
Comment on
attachment 458679
[details]
Patch win failures unrelated
Chris Dumez
Comment 3
2022-05-02 11:46:09 PDT
Comment on
attachment 458679
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=458679&action=review
> Source/WebCore/workers/service/ServiceWorkerRegistration.cpp:158 > + if (auto* serviceWorkerGbalScope = dynamicDowncast<ServiceWorkerGlobalScope>(scriptExecutionContext()); serviceWorkerGbalScope && serviceWorkerGbalScope->serviceWorker().state() == ServiceWorkerState::Installing) {
typo: serviceWorkerGbalScope
youenn fablet
Comment 4
2022-05-02 22:29:31 PDT
Created
attachment 458720
[details]
Patch for landing
EWS
Comment 5
2022-05-02 23:29:41 PDT
ChangeLog entry in LayoutTests/ChangeLog contains OOPS!.
youenn fablet
Comment 6
2022-05-02 23:46:27 PDT
Created
attachment 458723
[details]
Patch for landing
EWS
Comment 7
2022-05-03 01:08:03 PDT
Committed
r293719
(
250208@main
): <
https://commits.webkit.org/250208@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458723
[details]
.
Radar WebKit Bug Importer
Comment 8
2022-05-03 01:09:13 PDT
<
rdar://problem/92655450
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug