ServiceWorkerRegistration update should fail if called from an installing service worker context https://bugs.webkit.org/show_bug.cgi?id=239962

Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

* web-platform-tests/service-workers/service-worker/update-not-allowed.https-expected.txt:

Source/WebCore:

Implement step 4 of https://w3c.github.io/ServiceWorker/#service-worker-registration-update.
Covered by rebased test.

* workers/service/ServiceWorkerRegistration.cpp:
(WebCore::ServiceWorkerRegistration::update):

LayoutTests:

* TestExpectations:

Canonical link: https://commits.webkit.org/250208@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293719 268f45cc-cd09-0410-ab3c-d52691b4dbfc